# log-watcher

./: Cargo.toml  rustfmt.toml
src/: app.rs  cache.rs  file_source.rs  filter.rs  highlight.rs  input.rs  main.rs  model.rs  ui.rs
