[package]
name = "log-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
regex = "1"
notify = "6"
unicode-width = "0.2"

# 编译器 Compiler optimization configuration-balance performance and compilation speed
[profile.release]
opt-level = 3 # Highest optimization level (does not affect compilation speed)
lto = "thin"#Thin LTO-balance performance and compilation speed (5-10 times faster than fat)
codegen-units = 16 # 16 code generation units-parallel compilation (10 times faster than 1)
panic = "abort"#Panic is abort
overflow-checks = false # Disable overflow checking
debug =false # Disable debugging information
debug-assertions = false # Disable debugging assertions
rpath = false
strip =true # remove symbol table
incremental = true # incremental compilation-significantly accelerate recompilation

[profile.dev]
opt-level = 1 # Moderate optimization during development
overflow-checks =true # Enable overflow checking during development